--- a/MatrixHelperSolution/MatrixHelper/MatrixHelper.csproj
+++ b/MatrixHelperSolution/MatrixHelper/MatrixHelper.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="CustomLogger">
       <HintPath>..\..\..\CustomLogger\CustomLoggerSolution\CustomLogger\bin\Debug\netcoreapp3.1\CustomLogger.dll</HintPath>
     </Reference>
